<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:title="@string/settings_username"
            android:key="prefUsername"/>
    <SwitchPreference
            android:title="@string/settings_low_limit"
            android:summary="@string/settings_low_limit_sub"
            android:key="prefLimit"/>
    <SwitchPreference
            android:title="@string/settings_hide_found"
            android:summary="@string/settings_hide_found_sub"
            android:key="prefHideFound"/>
    <ListPreference
            android:title="@string/settings_server"
            android:entries="@array/settings_servers_list_entries"
            android:entryValues="@array/settings_servers_list_values"
            android:key="prefServer"/>
    <SwitchPreference
            android:title="@string/settings_reset_map"
            android:summary="@string/settings_reset_map_sub"
            android:key="prefMapAutoPosition"/>
    <Preference
            android:title="@string/settings_set_map"
            android:summary="@string/settings_set_map_sub"
            android:key="prefSelectMap"/>
</PreferenceScreen>
