<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View
            android:layout_width="match_parent"
            android:id="@+id/infowindowShadow"
            android:layout_height="4dp"
            android:rotation="180"
            android:background="@drawable/shadow"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/primary_material_light">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <!-- size-->
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <TextView
                        android:text="@string/label_size"
                        android:textColor="@color/textColorPrimaryInactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/infoCacheSize"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/textColorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- type-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <TextView
                        android:text="@string/label_type"
                        android:textColor="@color/textColorPrimaryInactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/infoCacheType"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/textColorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- owner-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <TextView
                        android:text="@string/label_owner"
                        android:textColor="@color/textColorPrimaryInactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/infoCacheOwner"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/textColorPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/textColorPrimary"
                android:onClick="showAttributes"
                android:drawableTop="@drawable/ic_assignment_black_36dp"
                android:text="@string/cache_attrs"/>
    </LinearLayout>
</LinearLayout>